--- a/config.py.template
+++ b/config.py.template
@@ -1,3 +1,9 @@
-
 network_name = 'freifunk'
 network_pw = ''
+
+efa_departure_rest_endpoint_template = 'https://efa-api.asw.io/api/v1/station/{}/departures/'
+efa_station_ids = ["5006074", "5006056"]
+efa_numbers = ['S1', 'S2', 'S3', 'U1', 'U2']
+efa_directions = ['Backnang', 'Kirchheim (T)', 'Plockingen', 'Esslingen (N)', 'Schorndorf', 'Neckarpark',
+                  'NeckarPark (Stadion)', 'Bad Cannstatt', 'Bad Cannstatt Wilhelmsplatz', 'Neugereut']
+
