#22 trying to reduce memory consumption - part I

--- a/config.py.template
+++ b/config.py.template
@@ -5,8 +5,8 @@ efa_departure_rest_endpoint_template = 'https://efa-api.asw.io/api/v1/station/{}
 efa_stations = [
     {
         "id": "5006074",
+        "fetchLimit": 2,
         "name": "RH",
-        "fetchLimit": 4,
         "fullName": "Rathhaus",
         "distance_in_minutes": 4,
         "numbers": ['U1'],
@@ -14,12 +14,13 @@ efa_stations = [
     },
     {
         "id": "5006056",
+        "fetchLimit": 5,
         "name": "SMitte",
-        "fetchLimit": 4,
         "fullName": "Stadtmitte",
         "distance_in_minutes": 4,
         "numbers": ['S1', 'S2', 'S3', 'U1', 'U2'],
         "directions": ['Backnang', 'Kirchheim (T)', 'Plochingen', 'Esslingen (N)', 'Schorndorf', 'Neckarpark',
-                       'NeckarPark (Stadion)', 'Bad Cannstatt', 'Bad Cannstatt Wilhelmsplatz', 'Neugereut', 'Fellbach']
+                       'NeckarPark (Stadion)', 'Bad Cannstatt', 'Bad Cannstatt Wilhelmsplatz', 'Neugereut',
+                       'Fellbach Lutherkirche']
     }
 ]
