--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,20 @@
 adafruit-ampy==1.0.3
+astroid==1.6.3
+certifi==2018.4.16
+chardet==3.0.4
 click==6.7
 ecdsa==0.13
 esptool==2.3.1
+idna==2.6
+isort==4.3.4
+lazy-object-proxy==1.3.1
+mccabe==0.6.1
 pyaes==1.6.1
+pylint==1.8.4
 pyserial==3.4
 pyudev==0.21.0
+requests==2.18.4
 rshell==0.0.11
 six==1.11.0
+urllib3==1.22
+wrapt==1.10.11
